<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- USING LINEAR LAYOUT SINCE LAYOUT OF SCREEN IS SIMPLE AND NEEDS A SIMPLE VERTICAL VIEW -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.instructions.InstructionsFragment">

        <TextView
            android:id="@+id/instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/instructions_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_follow_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/instructions_guide"
            app:layout_constraintTop_toBottomOf="@+id/instructions_title" />

        <TextView
            android:id="@+id/text_step_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/view_text"
            app:layout_constraintTop_toBottomOf="@+id/text_follow_instructions" />

        <TextView
            android:id="@+id/text_step_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_shoe"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/text_step_one" />

        <TextView
            android:id="@+id/text_have_fun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/have_fun"
            app:layout_constraintTop_toBottomOf="@+id/text_step_two" />

        <Button
            android:id="@+id/go_to_invetory_button"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/go_to_inventory"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/text_have_fun" />
    </LinearLayout>
</layout>