<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.shoelist.ShoeDetailFragment">

    <TextView
        android:id="@+id/shoe_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/shoe_info"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shoe_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/shoe_name"
        app:layout_constraintStart_toStartOf="@+id/shoe_info"
        app:layout_constraintTop_toBottomOf="@+id/shoe_info" />

    <TextView
        android:id="@+id/company_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/shoe_company"
        app:layout_constraintStart_toStartOf="@+id/shoe_name_input"
        app:layout_constraintTop_toBottomOf="@+id/shoe_name_input" />

    <TextView
        android:id="@+id/shoe_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/shoe_size"
        app:layout_constraintStart_toStartOf="@+id/company_input"
        app:layout_constraintTop_toBottomOf="@+id/company_input" />

    <TextView
        android:id="@+id/shoe_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/shoe_description"
        app:layout_constraintStart_toStartOf="@+id/size_input"
        app:layout_constraintTop_toBottomOf="@+id/size_input" />

    <EditText
        android:id="@+id/shoe_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/shoe_name_label"
        app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

    <EditText
        android:id="@+id/company_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/company_label"
        app:layout_constraintTop_toBottomOf="@+id/company_label" />

    <EditText
        android:id="@+id/size_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/shoe_size_label"
        app:layout_constraintTop_toBottomOf="@+id/shoe_size_label" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/shoe_description_label"
        app:layout_constraintTop_toBottomOf="@+id/shoe_description_label" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/description_input"
        app:layout_constraintTop_toBottomOf="@+id/description_input" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/cancel_button"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/description_input"
        app:layout_constraintTop_toBottomOf="@+id/description_input" />

</androidx.constraintlayout.widget.ConstraintLayout>